deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: namespace1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back1-deployment
  namespace: namespace1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back1
  template:
    metadata:
      labels:
        app: back1
    spec:
      containers:
        - name: back1-container
          image: back1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back2-deployment
  namespace: namespace2
spec:
  replicas: 6
  selector:
    matchLabels:
      app: back2
  template:
    metadata:
      labels:
        app: back2
    spec:
      containers:
        - name: back2-container
          image: back2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
