back.yaml
# kubectl apply -f ./back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back1-deployment
  namespace: namespace1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back1
  template:
    metadata:
      labels:
        app: back1
    spec:
      containers:
        - name: back1-container
          image: back1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back2-deployment
  namespace: namespace2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back2
  template:
    metadata:
      labels:
        app: back2
    spec:
      containers:
        - name: back2-container
          image: back2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---

# kubectl port-forward service/back1-service 3000:80
apiVersion: v1
kind: Service
metadata:
  name: back1-service
  namespace: namespace1
spec:
  selector:
    app: back1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---

# kubectl port-forward service/back1-service 3000:80
apiVersion: v1
kind: Service
metadata:
  name: back2-service
  namespace: namespace2
spec:
  selector:
    app: back2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
