deployment.yaml
# kubectl apply -f ./deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experiments-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: experiments
  template:
    metadata:
      labels:
        app: experiments
    spec:
      containers:
        - name: experiments-container
          image: experiments:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: back1-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back1
  template:
    metadata:
      labels:
        app: back1
    spec:
      containers:
        - name: back1-container
          image: back1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back2-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back2
  template:
    metadata:
      labels:
        app: back2
    spec:
      containers:
        - name: back2-container
          image: back2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---


# kubectl port-forward service/experiments-service 3000:80
apiVersion: v1
kind: Service
metadata:
  name: experiments-service
  namespace: default
spec:
  selector:
    app: experiments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
# kubectl port-forward service/back1-service 3001:80
apiVersion: v1
kind: Service
metadata:
  name: back1-service
  namespace: default
spec:
  selector:
    app: back1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
