services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: back1-service
  namespace: namespace1
spec:
  selector:
    app: back1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: back2-service
  namespace: namespace2
spec:
  selector:
    app: back2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
